# RAG-for-NetPerf-RCA

./: README.md  pyproject.toml
data/pdf/: doi-10.1109_JPROC.2019.2896848.pdf.meta.json  doi-10.1109_TNSM.2019.2948420.pdf.meta.json  j.comcom.2021.12.006.pdf.meta.json  j.comcom.2022.10.003.pdf.meta.json  j.comcom.2023.09.013.pdf.meta.json  j.comcom.2024.107961.pdf.meta.json  rsd-v11i12.34200.pdf.meta.json
data/txt/: rfc1191.txt  rfc1191.txt.meta.json  rfc3022.txt  rfc3022.txt.meta.json  rfc3168.txt  rfc3168.txt.meta.json  rfc4271.txt  rfc4271.txt.meta.json  rfc4821.txt  rfc4821.txt.meta.json  rfc4987.txt  rfc4987.txt.meta.json  rfc5681.txt  rfc5681.txt.meta.json  rfc7348.txt  rfc7348.txt.meta.json  rfc7432.txt  rfc7432.txt.meta.json  rfc791.txt  rfc791.txt.meta.json  rfc792.txt  rfc792.txt.meta.json  rfc793.txt  rfc793.txt.meta.json  rfc8200.txt  rfc8200.txt.meta.json  rfc8289.txt  rfc8289.txt.meta.json  rfc8290.txt  rfc8290.txt.meta.json  rfc8926.txt  rfc8926.txt.meta.json  virtio-v1.2.txt
data/web/: kernel-bpf-index.md  kernel-docs-index.md  kernel-docs-networking-index.md  kernel-hw-vuln-l1tf.md  kernel-ip-sysctl.md  kernel-kvm-index.md  kernel-network-scaling.md  kernel-networking-index.md  kernel-nf-conntrack-sysctl.md  kernel-pci-sriov-howto.md  kernel-softnet-driver-issues.md  kernel-vfio-driver-api.md  kernel-virtio-driver-api.md  man-conntrack.md  man7-bpftool.md  man7-capabilities.md  man7-mpstat.md  (+7 more)
kb_sample/: kernel-pci-sriov-howto.md
rag/: __init__.py  build_dataset.py  data_loader.py  run_rag_eval.py  vector_db.py
sbrc2026-artifact-rag/: .gitignore
(+1889 files in other folders)
